force-app/main/default/objects/xDO_TTHAIR_Booking_Class__c/xDO_TTHAIR_Booking_Class__c.object-meta.xml
<CustomObject>
    <label>TTH Booking Class</label>
    <nameField>
        <label>Booking Class</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking_Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>