force-app/main/default/objects/xDO_TTHAIR_Booking_Class__c/fields/xDO_TTHAIR_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Cancellation__c</fullName>
    <label>Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chargeable</fullName>
            </value>
            <value>
                <fullName>Not allowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>