force-app/main/default/objects/xDO_TTHAIR_Booking_Class__c/fields/xDO_TTHAIR_Change__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Change__c</fullName>
    <label>Change</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chargeable</fullName>
            </value>
            <value>
                <fullName>Complimentary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>