force-app/main/default/objects/xDO_TTHAIR_Booking_Class__c/fields/xDO_TTHAIR_Fare_Type__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Fare_Type__c</fullName>
    <label>Fare Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lite</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Flexi</fullName>
            </value>
            <value>
                <fullName>First/Suites</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>