force-app/main/default/objects/xDO_TTHAIR_Booking_Class__c/fields/xDO_TTHAIR_Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Ticket_Type__c</fullName>
    <label>Ticket Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Economy</fullName>
            </value>
            <value>
                <fullName>Premium Economy</fullName>
            </value>
            <value>
                <fullName>First/Suites</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>