force-app/main/default/objects/xDO_TTHAIR_Booking_Class__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>xDO_TTHAIR_Fare_Type__c</columns>
    <columns>xDO_TTHAIR_Cancellation__c</columns>
    <columns>xDO_TTHAIR_Change__c</columns>
    <columns>xDO_TTHAIR_No_Show__c</columns>
    <columns>xDO_TTHAIR_Ticket_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>